# iOSBuild

./: .gitignore  .readthedocs.yaml  README.md  clean.sh  ios_build.py  main.py  pyproject.toml
.github/workflows/: coverage.yml  issues.yml  python-package.yml
docs/: about.rst  conf.py  index.rst  ios_build.rst  license.rst  modules.rst  requirements.txt
example/: CMakeLists.txt  README.md
example/src/: CMakeLists.txt  library.c
ios_build/: __init__.py  __main__.py  build.py  cmake.py  errors.py  functions.py  interface.py  ios_build.py  logo.txt  parser.py  printer.py  run.py  search.py  toolchain.py  xcodebuild.py
tests/: build_test.py  conftest.py  test_build.py  test_cmake.py  test_interface.py  test_parse_tools.py  test_parser.py  test_printer.py  test_runner.py  test_search.py  test_toolchain.py  test_xcodebuild.py
tests/example/: CMakeLists.txt
tests/example/include/: library.h
tests/example/src/: CMakeLists.txt
