[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iOSBuild"
description = "A Python script for creating XCFrameworks for CMake projects"
requires-python = ">= 3.9"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []
keywords = ["iOS", "MacOS", "CMake", "XCFramework", "Apple"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/zwill22/iOSBuild"

[tool.setuptools.packages.find]
exclude = ["build", "install"]

[project.scripts]
ios_build = "ios_build.ios_build:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "tests"
]
pythonpath = "ios_build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
