[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iOSBuild"
description = "A Python script for creating XCFrameworks for CMake projects"
requires-python = ">= 3.9"
authors = [ { name = "Z M Williams", email = "z.m.will@icloud.com" }]
version = "0.2.0"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "cmake>=3.22"
]
metadata_version = "2.4"
keywords = ["iOS", "MacOS", "CMake", "XCFramework", "Apple"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = [
    "pytest"
]


[project.urls]
Repository = "https://github.com/zwill22/iOSBuild"
Documentation = "https://iosbuild.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
packages = ["ios_build"]

[project.scripts]
ios_build = "ios_build.run:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "tests"
]
pythonpath = "ios_build"
markers = [
    "slow"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
ignore_errors = true
fail_under = 80
skip_empty = true
